--- a/HTML/Vorm.html
+++ b/HTML/Vorm.html
@@ -27,7 +27,7 @@
 					<option> Jooksmine</option>
 					<option> Kiirkõnd</option>
 					<option> Jalutamine</option>
-										
+					</select>										
 				<p> Kuidas sulle meeldib eesti.ee leht? </p>
 				<input type='range' min='0' max='10'>
 				<br>
